[package]
name = "kiwi-measurements"
version = "0.0.1"
authors = ["Sunip K. Mukherjee <sunipkmukherjee@gmail.com>"]
edition = "2024"
description = "Package for representing measurements from various sensors on the Kiwi mainboard."

[dependencies]
heapless = { version = "0.9", default-features = false, features = [
    "defmt",
    "serde",
] }
defmt = { version = "1.0", optional = true }
crc16 = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
defmt = ["dep:defmt"]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0"